[tool.poetry]
name = "workout-api"
version = "0.1.0"
description = ""
authors = ["melo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.20"
mysql-connector-python = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
